# spectral-guard

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
spectral_guard/: __init__.py
spectral_guard/core/: circuit_breaker.py  proposed_edge.py  staleness_monitor.py
tests/unit/: test_proposed_edge.py
