[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectral-guard"
version = "2.0.0"
description = "O(1) topological wormhole rejection for hallucination-free neuro-symbolic agents"
authors = [{name="Shaik Wasim Akram", email="wasimakram@waveinity.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["spectral-graph", "hallucination", "knowledge-graph", "neuro-symbolic", "llm-safety"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "jax>=0.4.20",
  "pydantic>=2.0",
  "networkx>=3.1",
  "neo4j>=5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff", "mypy"]
benchmarks = ["sentence-transformers", "matplotlib", "jupyter"]

[project.urls]
Homepage = "https://github.com/waveinity-ai/spectral-guard"
Documentation = "https://github.com/waveinity-ai/spectral-guard#readme"